Работа с вебсокетами Проверял количество потоков вызываемых при работе с веб сокетами

--- a/src/main/resources/templates/pingpong.html
+++ b/src/main/resources/templates/pingpong.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>WS - Ping Pong</title>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 
+<!--<div>-->
+<!--    <textarea id="message" style="width: 300px" placeholder="your message"></textarea>-->
+
+<!--    <button id="ping" onclick="ping();">Ping</button>-->
+<!--</div>-->
+
+<!--<div>-->
+<!--    <h3>Messages</h3>-->
+<!--    <div id="stack">-->
+<!--        <p></p>-->
+<!--    </div>-->
+
+<!--</div>-->
 <div>
-    <textarea id="message" style="width: 300px" placeholder="your message"></textarea>
-
-    <button id="ping" onclick="ping();">Ping</button>
+    <h3>Infinity Scroll</h3>
+    <div id="inscroll"></div>
 </div>
-
-<div>
-    <h3>Messages</h3>
-    <div id="stack">
-        <p></p>
-    </div>
-
-</div>
-<div></div>
 </body>
 </html>
